Version 3.9.29
- Implemented concrete classes in BASIC
- Implemented function templates in BASIC
- Fixed typos in P2 _clkset function
- Fixed a problem with @ operator applied to labels in Spin code outside of DAT section
- Changed listing file output slightly to force labels to be output at the correct addresses
- Added ORGH =>N for forcing hub mode with address at least N

Version 3.9.28
- Only use jump table for switch / select if the density is greater than 1/2
- Do small immediate optimizations even for P2 (it was accidentally P1 only)
- Add error if nop instruction is conditionalized
- Improved output formatting code, particularly for floating point
- Improved error messages for bad addressing modes
- Fixed octal number parsing in C
- Added ability to declare methods in C structs
- Expanded standard C library
- Use the include directory to search for files on the command line if they end with .a.
- Fixed some incorrect detection of unused methods in indirect function calls.

Version 3.9.27
- Fixed a name conflict in some old style C function declarations
- Added CAST operator to BASIC
- Added support in C/C++ output for doing relocation of P2 ASM code at run time (needed for supporting HUB addresses)
- Added CASE_FAST keyword to Spin, and implemented jump tables for C switch, BASIC select, and Spin CASE_FAST
- Added code signature to fastspin.exe

Version 3.9.26
- Added DEF FNA(X)=X form to BASIC
- Fixed declarations of functions inside other C functions
- Fixed SELECT CASE in BASIC when the test is on strings or floats
- Fixed an optimizer bug that affected local arrays
- Fixed space allocation for local arrays in C functions
- On P2, default to 160MHz and 230400 baud if no explicit clkset is given
- Made BASIC read functions support base 16 and base 2 numbers
- Implemented struct assignment for C
- Experimental -z option to compress the code (produces smaller but slower code)

Version 3.9.25